--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
@@ -11,23 +12,16 @@
     />
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
-    <link
-      href="assets/vendor/bootstrap/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
-      rel="stylesheet"
-    />
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
-    <link
-      href="assets/vendor/glightbox/css/glightbox.min.css"
-      rel="stylesheet"
-    />
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+    <!-- CSS -->
     <link href="assets/css/style.css" rel="stylesheet" />
   </head>
+
   <body>
+
     <!-- ======= Header ======= -->
     <header id="header" class="d-flex align-items-center">
       <div class="container d-flex justify-content-between">
@@ -38,34 +32,13 @@
         </div>
         <nav id="navbar" class="navbar">
           <ul>
-            <li>
-              <a class="nav-link scrollto active" href="#hero">Home</a>
-            </li>
-            <li>
-              <a class="nav-link scrollto" href="#about">About</a>
-            </li>
-            <li>
-              <a class="nav-link scrollto" href="#involve">Get Involved</a>
-            </li>
-            <li class="dropdown">
-              <a href="donate.html" target="_blank">
-                <span>Donate</span>
-              </a>
-            </li>
-            <li>
-              <a class="nav-link scrollto" href="#team">Team</a>
-            </li>
-            <li>
-              <a class="nav-link scrollto" href="#faq">FAQ</a>
-            </li>
-             <li>
-              <a class="nav-link scrollto" style="letter-spacing: 1px;" href="#footer">Subscribe</a>
-            </li>
-            <li>
-              <a class="nav-link scrollto" href="contact.html" target="_blank"
-                >Contact</a
-              >
-            </li>
+            <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+            <li><a class="nav-link scrollto" href="#about">About</a></li>
+            <li><a class="nav-link scrollto" href="#involve">Get Involved</a></li>
+            <li><a class="nav-link" href="donate.html" target="_blank">Donate</a></li>
+            <li><a class="nav-link scrollto" href="#faq">FAQ</a></li>
+            <li><a class="nav-link scrollto" style="letter-spacing: 1px;" href="#footer">Subscribe</a></li>
+            <li><a class="nav-link" href="contact.html" target="_blank">Contact</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
@@ -73,48 +46,28 @@
       </div>
     </header>
     <!-- End Header -->
+
     <!-- ======= Hero Section ======= -->
     <section id="hero">
       <div class="hero-container" data-aos="fade-up">
-        <h1>Welcome to SellOTrees</h1>
-        <h2>
-          Plant a <span style="color: #8fc04e">TREE</span> and plant
-          <span style="color: #8fc04e">HOPE</span> for future
-        </h2>
+        <h1>Welcome to SellOTree</h1>
+        <h2>Plant a <span style="color: #8fc04e">TREE</span> and plant <span style="color: #8fc04e">HOPE</span> for future</h2>
         <a href="donate.html" target="_blank" class="btn-get-started">Donate</a>
       </div>
     </section>
     <!-- End Hero -->
+
+
     <main id="main">
+
       <!-- ======= About Section ======= -->
       <section id="about" class="about">
         <div class="container">
           <div class="row">
-            <div
-              class="
-                col-xl-6 col-lg-6
-                video-box
-                d-flex
-                justify-content-center
-                align-items-stretch
-              "
-              data-aos="zoom-in"
-            >
-              <a
-                href="https://im.indiatimes.in/media/content/2019/Aug/planting_more_trees_1566553311.jpg"
-              ></a>
+            <div class="col-xl-6 col-lg-6 video-box d-flex justify-content-center align-items-stretch" data-aos="zoom-in">
+              <a href="https://im.indiatimes.in/media/content/2019/Aug/planting_more_trees_1566553311.jpg"></a>
             </div>
-            <div
-              class="
-                col-xl-6 col-lg-6
-                d-flex
-                flex-column
-                align-items-stretch
-                justify-content-center
-                py-5
-                px-lg-5
-              "
-            >
+            <div class="col-xl-6 col-lg-6 d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5">
               <div class="box-heading" data-aos="fade-up">
                 <h4>About us</h4>
                 <h3>We aim to plant</h3>
@@ -165,6 +118,7 @@
         </div>
       </section>
       <!-- End About Section -->
+      
       <!-- ======= Why Us Section ======= -->
       <section id="involve" class="why-us">
         <div class="container">
@@ -174,8 +128,8 @@
             <p>Between every two pines is a doorway to a new world</p>
           </div>
           <div class="row">
-            <div class="col-lg-4">
-              <div class="box" data-aos="fade-up">
+            <div class="col-lg-4" data-aos="fade-up">
+              <div class="box">
                 <span>01</span>
                 <h4>As an individual</h4>
                 <p>
@@ -185,8 +139,8 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-4 mt-4 mt-lg-0">
-              <div class="box" data-aos="fade-up" data-aos-delay="100">
+            <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="100">
+              <div class="box">
                 <span>02</span>
                 <h4>As a business</h4>
                 <p>
@@ -196,11 +150,7 @@
                 </p>
               </div>
             </div>
-            <div
-              class="col-lg-4 mt-4 mt-lg-0"
-              data-aos="fade-up"
-              data-aos-delay="200"
-            >
+            <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="200">
               <div class="box">
                 <span>03</span>
                 <h4>As a school</h4>
@@ -328,112 +278,7 @@
           </table>
         </div>
       </section>
-      <!-- ======= Team Section ======= -->
-      <section id="team" class="team">
-        <div class="container">
-          <div class="section-title" data-aos="zoom-in">
-            <h2>Team</h2>
-            <h3>Our Hard Working <span>Team</span></h3>
-            <p>Give the gift of trees 🌲</p>
-          </div>
-          <div class="row" style="justify-content: center">
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-              <div class="member" data-aos="fade-up">
-                <div class="member-img">
-                  <img
-                    src="assets/img/team/team-1.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="social">
-                    <a href="https://twitter.com/dude_nayak" target="_blank">
-                      <i class="bi bi-twitter"></i>
-                    </a>
-                    <a href="https://www.facebook.com/deveshjain2k1">
-                      <i class="bi bi-facebook" target="_blank"></i>
-                    </a>
-                    <a href="https://www.instagram.com/dude.nayak/">
-                      <i class="bi bi-instagram" target="_blank"></i>
-                    </a>
-                    <a
-                      href="https://www.linkedin.com/in/devesh-jain-b68b3119a/"
-                    >
-                      <i class="bi bi-linkedin" target="_blank"></i>
-                    </a>
-                  </div>
-                </div>
-                <div class="member-info">
-                  <h4>Devesh Jain</h4>
-                  <span>Member</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-              <div class="member" data-aos="fade-up" data-aos-delay="100">
-                <div class="member-img">
-                  <img
-                    src="assets/img/team/team-2.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="social">
-                    <a href="https://twitter.com/Anushkajain6459">
-                      <i class="bi bi-twitter" target="_blank"></i>
-                    </a>
-                    <a
-                      href="https://www.facebook.com/profile.php?id=100035419908093"
-                    >
-                      <i class="bi bi-facebook" target="_blank"></i>
-                    </a>
-                    <a href="https://www.instagram.com/nushka.jain/">
-                      <i class="bi bi-instagram" target="_blank"></i>
-                    </a>
-                    <a href="" target="_blank">
-                      <i class="bi bi-linkedin"></i>
-                    </a>
-                  </div>
-                </div>
-                <div class="member-info">
-                  <h4>Anushka Jain</h4>
-                  <span>Member</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-              <div class="member" data-aos="fade-up" data-aos-delay="200">
-                <div class="member-img">
-                  <img
-                    src="assets/img/team/team-3.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="social">
-                    <a href="">
-                      <i class="bi bi-twitter"></i>
-                    </a>
-                    <a href="">
-                      <i class="bi bi-facebook"></i>
-                    </a>
-                    <a href="https://www.instagram.com/sushant_patial/">
-                      <i class="bi bi-instagram"></i>
-                    </a>
-                    <a
-                      href="https://www.linkedin.com/in/sushant-patial-2895a7204/"
-                    >
-                      <i class="bi bi-linkedin"></i>
-                    </a>
-                  </div>
-                </div>
-                <div class="member-info">
-                  <h4>Sushant Patial</h4>
-                  <span>Member</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- End Team Section -->
+     
       <!-- ======= F.A.Q Section ======= -->
       <section id="faq" class="faq">
         <div class="container">
@@ -571,6 +416,7 @@
         </div>
       </section>
     </main>
+
     <!-- ======= Footer ======= -->
     <footer id="footer">
       <div class="footer-top">
@@ -690,6 +536,6 @@
 		}
     </script>
  </script>
- <!--newsletter complete-->>
+ <!--newsletter complete-->
   </body>
 </html>
