--- a/donate.html
+++ b/donate.html
@@ -116,7 +116,7 @@
                 </ul>
               </div>
               <div class="portfolio-description">
-                <h2>YES! I WANT TO HELP RETREE REVERSE CLIMATE CHANGE</h2>
+                <h2>YES! I WANT TO HELP SELLOTREE REVERSE CLIMATE CHANGE</h2>
                 <p>
                   Each tree you plant will remove 48 pounds of carbon dioxide
                   from the air every year. Your pledge will help us grow better
@@ -227,40 +227,40 @@
 
     <!--Newsletter-->
     <script
-  src="https://code.jquery.com/jquery-2.2.4.min.js"
-  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-  crossorigin="anonymous"></script>
-<script src="https://smtpjs.com/v3/smtp.js"></script>
- 
-<script>  
+    src="https://code.jquery.com/jquery-2.2.4.min.js"
+    integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+    crossorigin="anonymous"></script>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+  
+  <script>  
 
-     function sendmail(){
-			var email = $('#Sender').val();
+      function sendmail(){
+        var email = $('#Sender').val();
 
-			var Body='Email: '+email;
+        var Body='Email: '+email;
 
-			Email.send({
-        SecureToken:"fbf31702-bb7f-4a4e-9c1c-4ccf17ee777f",
-				
-				To: 'sushantpatial18@gmail.com',
-				From: "anushkajain6459@gmail.com",
-				Subject: "New message on contact from "+name,
-				Body: Body
-			}).then(
-				message =>{
-					if(message=='OK'){
-					alert('Your mail has been send. Thank you for connecting.');
-					}
-					else{
-						console.error (message);
-						alert('There is error at sending message. ')
-					}
-				}
-			);
-		}
-    </script>
- </script>
- <!--newsletter complete-->
+        Email.send({
+          SecureToken:"fbf31702-bb7f-4a4e-9c1c-4ccf17ee777f",
+          
+          To: 'sushantpatial18@gmail.com',
+          From: "anushkajain6459@gmail.com",
+          Subject: "New message on contact from "+name,
+          Body: Body
+        }).then(
+          message =>{
+            if(message=='OK'){
+            alert('Your mail has been send. Thank you for connecting.');
+            }
+            else{
+              console.error (message);
+              alert('There is error at sending message. ')
+            }
+          }
+        );
+      }
+      </script>
+  </script>
+  <!--newsletter complete-->
 
   </body>
 </html>
