--- a/donate.html
+++ b/donate.html
@@ -170,28 +170,28 @@
 
           <div class="social-links">
             <a
-              href="https://twitter.com/hackcbs/"
+              href=""
               class="twitter"
               target="_blank"
             >
               <i class="bx bxl-twitter"></i>
             </a>
             <a
-              href="https://www.facebook.com/hackcbs/"
+              href=""
               class="facebook"
               target="_blank"
             >
               <i class="bx bxl-facebook"></i>
             </a>
             <a
-              href="https://www.instagram.com/hackcbs/"
+              href=""
               class="instagram"
               target="_blank"
             >
               <i class="bx bxl-instagram"></i>
             </a>
             <a
-              href="https://www.linkedin.com/company/hackcbs/"
+              href=""
               class="linkedin"
               target="_blank"
             >
